--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+        <meta charset="utf-8">
+        <title>Туристична фірма Барви</title>
     </head>
     <body>
 <h1>Туристична фірма "Барви- тур"</h1>
-<img src="barvy.jpg" alt "логотип турфірма барви"></img>
+<img src="barvy.jpg" alt="логотип турфірма барви"></img>
     </body>
 </html>
